traces/bug_641.txt
src/femlib/P012_3d.cpp:830: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::P0_3d accesses global variable from a different translation unit: std::cout|.
Showing all 5 steps of the trace


src/femlib/P012_3d.cpp:830:1: initialization of Fem2D::P0_3d
828.        }     
829.        
830. > static TypeOfFE_P0Lagrange3d  P0_3d;
831.   GTypeOfFE<Mesh3> & P0Lagrange3d(P0_3d);
832.   

src/femlib/P012_3d.cpp:830:31: call to Fem2D::TypeOfFE_P0Lagrange3d_TypeOfFE_P0Lagrange3d
828.        }     
829.        
830.   static TypeOfFE_P0Lagrange3d  P0_3d;
                                     ^
831.   GTypeOfFE<Mesh3> & P0Lagrange3d(P0_3d);
832.   

src/femlib/P012_3d.cpp:44:28: call to Fem2D::TypeOfFE_Lagrange<Fem2D::Mesh3>_TypeOfFE_Lagrange
  42.   class TypeOfFE_P0Lagrange3d : public  TypeOfFE_Lagrange<Mesh3> { 
  43.   public:  
  44.     TypeOfFE_P0Lagrange3d(): TypeOfFE_Lagrange<Mesh3>(0) {  }
                                   ^
  45.     void FB(const What_d whatd,const Mesh & Th,const Element & K,const Rd &P, RNMK_ & val) const;
  46.     virtual R operator()(const FElement & K,const  RdHat & PHat,const KN_<R> & u,int componante,int op) const ;

src/femlib/PkLagrange.hpp:115:5: call to Fem2D::SetPtPk<Fem2D::R3,_Fem2D::Tet>
    113.       if(verbosity>9)    
    114.       cout << "\n +++ P"<<k<<" : ndof : "<< n <<endl;
    115.       SetPtPk<RdHat,Element> (this->PtInterpolation,this->ndfOn(),this->NbDoF);
               ^
    116.       if(verbosity>9)    cout << this->PtInterpolation<< endl;
    117.       for (int i=0;i<n;i++) 

src/femlib/PkLagrange.hpp:61:2: access to std::cout|
    59.       if(nn != k)
    60.         { 
    61.   	cout << nn << " == " << k << " d = "<< d << " " << dfon[0]<< dfon[1]<<dfon[2]<<dfon[3]<<" "<< E::ne << endl;
           ^
    62.   	assert(nn==k); 
    63.         }  
